Bug 85590 - COLOR PICKER: 'Pick a color' circle location is incorrect when opened
Summary: COLOR PICKER: 'Pick a color' circle location is incorrect when opened
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: color_handling target:4.4.0.0.beta2 t...
Keywords: bibisected, regression
Depends on:
Blocks: Color-Picker-Dialog
  Show dependency treegraph
 
Reported: 2014-10-29 08:30 UTC by Yousuf Philips (jay) (retired)
Modified: 2022-10-23 17:47 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot (40.38 KB, image/png)
2014-10-29 08:30 UTC, Yousuf Philips (jay) (retired)
Details
color picker cursor pinned to top-left on open (38.70 KB, image/png)
2014-10-29 12:12 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-10-29 08:30:10 UTC
Created attachment 108610 [details]
screenshot

When you open the custom color dialog, it doesnt show the white circle of where the current color is position in the palette. In order to get it to appear, i click up the up arrow for 'Red' and then press the down arrow to return it to its initial place.
Comment 1 Julien Nabet 2014-10-29 09:49:39 UTC
Jay: could you give a try to a more recent LO version? (last stable one is 4.3.2)
Also, on which env are you? (Windows, Linux, MacOs)
Comment 2 Yousuf Philips (jay) (retired) 2014-10-29 10:17:00 UTC
Sorry my bad. I didnt set the version number. :D

Version: 4.4.0.0.alpha1+
Build ID: 3efc3cc5b0b4b6151e928c2348c7dc6f74181db5
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-29_01:36:59
Comment 3 Julien Nabet 2014-10-29 10:27:22 UTC
No problem, I was just a bit surprised there wasn't these kind of info from an experience QA user ;-)
Comment 4 V Stuart Foote 2014-10-29 12:12:33 UTC
Created attachment 108620 [details]
color picker cursor pinned to top-left on open

Selection circle is there, but opens pinned incorrectly to upper left corner, and is not positioned at the color actually set in the bi-color comparison bar at bottom.

Any change moves the circle to correct location.

On Windows 7 sp1, en-US with
Version: 4.4.0.0.alpha1+
Build ID: 3efc3cc5b0b4b6151e928c2348c7dc6f74181db5
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-10-28_22:16:12
Comment 5 Yousuf Philips (jay) (retired) 2014-10-29 13:44:59 UTC
Yes you are correct about the circle being there, but you cant see it in the top left corner when the circle is set to white when you open a dark color. When you open a light color, the circle is in black so you can clearly see it then. :D
Comment 6 Adolfo Jayme Barrientos 2014-11-04 14:57:12 UTC
Apparently this regressed since this dialog was converted to the .ui format (commit de8648c3c84bdfb33f6366d0714482e143ddf02d).
Comment 7 Julien Nabet 2014-11-05 21:15:09 UTC
Caolan: Following Adolfo's comment (https://bugs.freedesktop.org/show_bug.cgi?id=85590#c6), one for you?
Comment 8 Commit Notification 2014-11-26 15:35:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7716d86f46dea72bd0e99f7074f718d558e88f49

Resolves: fdo#85590 'Pick a color' circle location is incorrect when opened

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-11-26 15:37:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=037e65cbdd76dc06593a43adbd72427c8765736c&h=libreoffice-4-4

Resolves: fdo#85590 'Pick a color' circle location is incorrect when opened

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-12-04 17:01:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=86f38a7af647a154ecfe12b90500e6c060793cf2&h=libreoffice-4-3

Resolves: fdo#85590 'Pick a color' circle location is incorrect when opened

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Adolfo Jayme Barrientos 2014-12-04 17:17:37 UTC
Verified, thanks!

(As this issue is not related to the 4.4 color picker, but it concerns the custom color dialog that was introduced many releases before, I don’t think it should block bug 85184.)
Comment 12 Yousuf Philips (jay) (retired) 2014-12-04 19:39:15 UTC
I've never seen a custom color picker dialog in any version before 4.4, so can you please let me know where i can find it.
Comment 13 Adolfo Jayme Barrientos 2014-12-04 20:40:54 UTC
In any LibreOffice version:
Tools > Options > Colors > click the “Edit” button.
Comment 14 Yousuf Philips (jay) (retired) 2014-12-06 05:43:30 UTC
(In reply to Adolfo Jayme from comment #13)
> In any LibreOffice version:
> Tools > Options > Colors > click the “Edit” button.

Thanks. :D
Comment 15 Robinson Tryon (qubit) 2015-12-17 08:38:11 UTC Comment hidden (obsolete)