Resolves: fdo#85590 'Pick a color' circle location is incorrect when opened

Change-Id: I18a00d0ab7acc30f4751c0e19cceffefdce90474
(cherry picked from commit 7716d86f46dea72bd0e99f7074f718d558e88f49)